# oracle-mcp-server

./: .env.example  .gitignore  README.md  mcp-client.example.json  opencode.example.jsonc  opencode.remote-http.example.jsonc  profiles.example.yaml  pyproject.toml  requirements.txt
scripts/: build-linux-x86_64-bundle.ps1  build-offline-bundle.ps1  install-offline.ps1  install-offline.sh  install-standalone-python-rhel9.sh
src/oracle_mcp/: __init__.py  check.py  config.py  db.py  server.py  sql_guard.py
tests/: test_config.py  test_db_helpers.py  test_lob_serialization.py  test_server_http_options.py  test_sql_guard.py
